Ajout du ContextManager